//
//  SearchView.swift
//  MovieKuno
//
//  Created by Leah Joy Ylaya on 1/22/21.
//

import Foundation
import SwiftUI

struct SearchView: View {
    var body: some View {
        Text("Search View")
    }
}
struct SearchView_Previews: PreviewProvider {
    static var previews: some View {
        SearchView()
    }
}

