/* 
  Localizable.strings
  MovieKuno

  Created by Leah Joy Ylaya on 1/22/21.
  
*/
"see_all" = "See all >";
"latest_movie" = "Latest Movie";
"latest_tv_show" = "Latest TV Show";
"popular_movie" = "Popular Movie";
"popular_tv_show" = "Popular TV Show";
"popular_people" = "Popular People";
"star_fill" = "star.fill";
"star" = "star";

// Showcase View
"showcase_description_placeholder" = "Panel description.";

// Onboarding View
"onboarding_title" = "MovieKuno";
"get_started_navigation" = "Get Started";
"explore_navigation" = "Explore";
"done_navigation" = "Done";
